# balaudeck

./: .gitignore  LICENSE  README.md  RELEASE.md  index.html  package-lock.json  package.json  vite.config.ts
.github/: FUNDING.yml
.github/workflows/: build-windows.yml  release.yml
docs/: privacy.html  store-listing.md
fastlane/: .env.example  Appfile  Fastfile  README.md
fastlane/metadata-mac/: copyright.txt
fastlane/metadata-mac/en-US/: description.txt  keywords.txt  marketing_url.txt  promotional_text.txt  release_notes.txt
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/en-US/changelogs/: 3000.txt  3001.txt  3002.txt  3003.txt  3004.txt  3005.txt  3006.txt  4000.txt
scripts/: android-wifi-install.sh  mas-build.sh  release-check.sh
src/: AboutModal.tsx  AiChat.tsx  App.css  App.tsx  AskModal.tsx  AuthFields.tsx  DbPanel.tsx  FilePreview.tsx  Icon.tsx  LocalPanel.tsx  LockGate.tsx  MongoPanel.tsx  NotePane.tsx  NotesPanel.tsx  PdfPreview.tsx  ProfileEditor.tsx  RedisPanel.tsx  S3Panel.tsx  SessionUI.tsx  SettingsModal.tsx  SftpPanel.tsx  Sidebar.tsx  SshPanel.tsx  SyncModal.tsx  TransferList.tsx  TunnelPanel.tsx  api.ts  broadcast.ts  busy.ts  dbConnect.ts  ddl.ts  main.tsx  markdown.ts  privacy.tsx  qhistory.ts  settings.ts  storeUpdate.ts  suggest.ts  terminalClipboard.ts  terminalMask.ts  (+5 more)
src-tauri/: Cargo.toml  Entitlements.mas.plist  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json  desktop.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  db.rs  gdrive.rs  lib.rs  local.rs  main.rs  mongo.rs  profiles.rs  rediskv.rs  s3.rs  sftp.rs  ssh.rs  storeupdate.rs  transfers.rs  tunnel.rs
src-tauri/src/engines/: mod.rs  mssql.rs  pg.rs  sqlite.rs
src/ai/: agentLoop.ts  classify.ts  markdown.tsx  tool.ts  types.ts
src/ai/tools/: db.ts  local.ts  ssh.ts
