[package]
name = "balaudeck"
version = "0.1.0"
description = "All-in-one SSH, SFTP, tunnel, and MySQL/MariaDB client built with Tauri 2."
authors = ["Okdii Solutions"]
license = "MIT"
repository = "https://github.com/okdii/balaudeck"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "balaudeck_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "io-util", "net", "sync", "time", "fs"] }
russh = "0.61.2"
russh-sftp = "2.3.0"
mysql_async = { version = "0.37.0", default-features = false, features = ["default-rustls"] }
futures-util = "0.3"
anyhow = "1.0.102"
once_cell = "1.21.4"
uuid = { version = "1.23.3", features = ["v4"] }
tauri-plugin-dialog = "2.7.1"
# Encrypted connection-backup bundle (cross-device export/import).
aes-gcm = "0.10"
argon2 = "0.5"
base64 = "0.22"
getrandom = "0.2"

# Keychain backend per platform.
[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
keyring = { version = "3", default-features = false, features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", default-features = false, features = ["windows-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", default-features = false, features = ["sync-secret-service"] }

# Biometric (Face ID / Touch ID) app lock is mobile-only.
[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-biometric = "2.3.2"

[target.'cfg(not(any(target_os = "ios", target_os = "android")))'.dependencies]
portable-pty = "0.9.0"

