[package]
name = "balaudeck"
version = "0.3.4"
description = "All-in-one SSH, SFTP, tunnel, and MySQL/MariaDB client built with Tauri 2."
authors = ["Okdii Solutions"]
license = "MIT"
repository = "https://github.com/okdii/balaudeck"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "balaudeck_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "io-util", "net", "sync", "time", "fs"] }
russh = "0.61.2"
russh-sftp = "2.3.0"
mysql_async = { version = "0.37.0", default-features = false, features = ["default-rustls"] }
# Additional SQL engines — all pure-Rust + rustls (no native OpenSSL / client
# libs) so they cross-compile for iOS/Android like mysql_async. SQLite is a
# self-contained C amalgamation (bundled), no external native dependency.
tokio-postgres = "0.7"
tokio-postgres-rustls = "0.13"
tiberius = { version = "0.12", default-features = false, features = ["rustls", "tds73", "chrono"] }
tokio-util = { version = "0.7", features = ["compat"] }
rusqlite = { version = "0.32", features = ["bundled"] }
async-trait = "0.1"
# NoSQL engines — pure-Rust + rustls (no native-tls, no C compression).
mongodb = { version = "3", default-features = false, features = ["rustls-tls", "bson-3", "compat-3-3-0"] }
redis = { version = "0.27", default-features = false, features = ["tokio-comp", "tokio-rustls-comp", "tls-rustls"] }
# Object storage (S3 / MinIO / RustFS). No aws-config — the Config is built
# directly with static credentials; the smithy runtime is rustls-only
# (aws-lc-rs, which already cross-compiles in this tree via russh).
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }
# Content-Type on upload (pure-Rust extension→MIME table, no C deps) — the
# preview pipeline classifies images by the stored content type.
mime_guess = "2"
futures-util = "0.3"
anyhow = "1.0.102"
once_cell = "1.21.4"
uuid = { version = "1.23.3", features = ["v4"] }
tauri-plugin-dialog = "2.7.1"
# Write the system clipboard from terminal OSC 52 / copy shortcut (all platforms).
tauri-plugin-clipboard-manager = "2"
# Read/write a user-picked file, incl. Android SAF content:// URIs and iOS
# security-scoped URLs (backup Save/Load to file on mobile).
tauri-plugin-fs = "2"
# Encrypted connection-backup bundle (cross-device export/import).
aes-gcm = "0.10"
argon2 = "0.5"
base64 = "0.22"
getrandom = "0.2"
# Decode SQL dump files in non-UTF-8 encodings (latin1/windows-1252, gbk, big5, …).
encoding_rs = "0.8"

# Keychain backend per platform.
[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
keyring = { version = "3", default-features = false, features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", default-features = false, features = ["windows-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", default-features = false, features = ["sync-secret-service"] }

# Biometric (Face ID / Touch ID) app lock is mobile-only.
[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-biometric = "2.3.2"
# Deep-link (custom URL scheme) — receives the Google OAuth redirect on mobile,
# where the desktop loopback flow isn't usable.
tauri-plugin-deep-link = "2"

# Android has no `keyring` backend; secrets are encrypted with a hardware-backed
# Android Keystore key via JNI to the SecretCrypto Kotlin helper. The JavaVM is
# captured in JNI_OnLoad (see profiles.rs) — tao/wry don't define it.
[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"

[target.'cfg(not(any(target_os = "ios", target_os = "android")))'.dependencies]
portable-pty = "0.9.0"
# Desktop-only self-updater (direct .dmg/.msi builds). Excluded from store
# builds — the Mac App Store / Play Store disallow self-updating binaries.
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

# Google Drive sync (desktop, iOS, Android): HTTPS via rustls to match the rest
# of the stack, SHA-256 for the PKCE challenge, and percent-encoding for the
# OAuth authorization URL.
[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["rustls-tls", "json"]

[dependencies.sha2]
version = "0.10"

[dependencies.urlencoding]
version = "2.1"

